--- a/app/templates/credentials/index.html
+++ b/app/templates/credentials/index.html
@@ -58,6 +58,7 @@
             <table class="table table-hover">
                 <thead>
                     <tr>
+                        <th>ID</th>
                         <th>名称</th>
                         <th>类型</th>
                         <th>数据库类型</th>
@@ -71,6 +72,11 @@
                 <tbody>
                     {% for cred in credentials.items %}
                     <tr>
+                        <td>
+                            <span class="badge bg-secondary" title="凭据ID">
+                                #{{ cred.id }}
+                            </span>
+                        </td>
                         <td>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-key text-primary me-2"></i>
