--- a/app/templates/instances/create.html
+++ b/app/templates/instances/create.html
@@ -61,7 +61,7 @@
                                 <select class="form-select" id="credential_id" name="credential_id" required>
                                     <option value="">请选择凭据</option>
                                     {% for cred in credentials %}
-                                    <option value="{{ cred.id }}">{{ cred.name }} ({{ cred.credential_type }})</option>
+                                    <option value="{{ cred.id }}">#{{ cred.id }} - {{ cred.name }} ({{ cred.credential_type }})</option>
                                     {% endfor %}
                                 </select>
                                 <div class="form-text">
