--- a/app/templates/tasks/index.html
+++ b/app/templates/tasks/index.html
@@ -76,7 +76,7 @@
                     <i class="fas fa-pause me-1"></i>批量禁用
                 </button>
                 <button type="button" class="btn btn-outline-warning" onclick="batchRunTasks()" id="batchRunBtn" disabled>
-                    <i class="fas fa-play me-1"></i>批量运行
+                    <i class="fas fa-bolt me-1"></i>批量运行
                 </button>
             </div>
         </div>
@@ -228,7 +228,7 @@
                                 </a>
                                 <button type="button" class="btn btn-outline-success" 
                                         onclick="runTask({{ task.id }})" title="立即运行">
-                                    <i class="fas fa-play"></i>
+                                    <i class="fas fa-bolt"></i>
                                 </button>
                                 <button type="button" class="btn btn-outline-{{ 'danger' if task.is_active else 'success' }}" 
                                         onclick="toggleTask({{ task.id }})" title="{{ '禁用' if task.is_active else '启用' }}">
